force-app/main/default/objects/AdoptionRequest__c/AdoptionRequest__c.object-meta.xml
<CustomObject>
    <description>Join object between a Pet and an Account</description>
    <label>Adoption Request</label>
    <nameField>
        <displayFormat>AR-{00000}</displayFormat>
        <label>Adoption Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adoption Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>