force-app/main/default/objects/AdoptionRequest__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Account that performs the request</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Adoption Requests</relationshipLabel>
    <relationshipName>AdoptionRequests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>