force-app/main/default/objects/AdoptionRequest__c/fields/Pet__c.field-meta.xml
<CustomField>
    <fullName>Pet__c</fullName>
    <description>Pet that the adoption refers to</description>
    <label>Pet</label>
    <referenceTo>Pet__c</referenceTo>
    <relationshipLabel>Adoption Requests</relationshipLabel>
    <relationshipName>AdoptionRequests</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>