force-app/main/default/objects/AdoptionRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The status of the Adoption Process</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>CompletedAdopted</fullName>
                <label>Completed - Adopted</label>
            </value>
            <value>
                <fullName>CompletedNotAdopted</fullName>
                <label>Completed - Not Adopted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>